cabal-version:      2.2
name:               gogol-androiddeviceprovisioning
version:            0.5.0
synopsis:           Google Android Device Provisioning Partner SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Automates Android zero-touch enrollment for device resellers, customers, and EMMs.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-androiddeviceprovisioning

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AndroidDeviceProvisioning
    Network.Google.AndroidDeviceProvisioning.Customers.Configurations.Create
    Network.Google.AndroidDeviceProvisioning.Customers.Configurations.Delete
    Network.Google.AndroidDeviceProvisioning.Customers.Configurations.Get
    Network.Google.AndroidDeviceProvisioning.Customers.Configurations.List
    Network.Google.AndroidDeviceProvisioning.Customers.Configurations.Patch
    Network.Google.AndroidDeviceProvisioning.Customers.Devices.ApplyConfiguration
    Network.Google.AndroidDeviceProvisioning.Customers.Devices.Get
    Network.Google.AndroidDeviceProvisioning.Customers.Devices.List
    Network.Google.AndroidDeviceProvisioning.Customers.Devices.RemoveConfiguration
    Network.Google.AndroidDeviceProvisioning.Customers.Devices.Unclaim
    Network.Google.AndroidDeviceProvisioning.Customers.Dpcs.List
    Network.Google.AndroidDeviceProvisioning.Customers.List
    Network.Google.AndroidDeviceProvisioning.Operations.Get
    Network.Google.AndroidDeviceProvisioning.Partners.Customers.Create
    Network.Google.AndroidDeviceProvisioning.Partners.Customers.List
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.Claim
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.ClaimAsync
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.FindByIdentifier
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.FindByOwner
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.Get
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.Metadata
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.Unclaim
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.UnclaimAsync
    Network.Google.AndroidDeviceProvisioning.Partners.Devices.UpdateMetadataAsync
    Network.Google.AndroidDeviceProvisioning.Partners.Vendors.Customers.List
    Network.Google.AndroidDeviceProvisioning.Partners.Vendors.List
    Network.Google.AndroidDeviceProvisioning.Types

  other-modules:
    Network.Google.AndroidDeviceProvisioning.Internal.Product
    Network.Google.AndroidDeviceProvisioning.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
