cabal-version:      2.2
name:               gogol-androidmanagement
version:            0.5.0
synopsis:           Google Android Management SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  The Android Management API provides remote enterprise management of Android devices and apps.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-androidmanagement

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AndroidManagement
    Network.Google.AndroidManagement.Enterprises.Applications.Get
    Network.Google.AndroidManagement.Enterprises.Create
    Network.Google.AndroidManagement.Enterprises.Delete
    Network.Google.AndroidManagement.Enterprises.Devices.Delete
    Network.Google.AndroidManagement.Enterprises.Devices.Get
    Network.Google.AndroidManagement.Enterprises.Devices.IssueCommand
    Network.Google.AndroidManagement.Enterprises.Devices.List
    Network.Google.AndroidManagement.Enterprises.Devices.Operations.Cancel
    Network.Google.AndroidManagement.Enterprises.Devices.Operations.Delete
    Network.Google.AndroidManagement.Enterprises.Devices.Operations.Get
    Network.Google.AndroidManagement.Enterprises.Devices.Operations.List
    Network.Google.AndroidManagement.Enterprises.Devices.Patch
    Network.Google.AndroidManagement.Enterprises.EnrollmentTokens.Create
    Network.Google.AndroidManagement.Enterprises.EnrollmentTokens.Delete
    Network.Google.AndroidManagement.Enterprises.Get
    Network.Google.AndroidManagement.Enterprises.List
    Network.Google.AndroidManagement.Enterprises.Patch
    Network.Google.AndroidManagement.Enterprises.Policies.Delete
    Network.Google.AndroidManagement.Enterprises.Policies.Get
    Network.Google.AndroidManagement.Enterprises.Policies.List
    Network.Google.AndroidManagement.Enterprises.Policies.Patch
    Network.Google.AndroidManagement.Enterprises.WebApps.Create
    Network.Google.AndroidManagement.Enterprises.WebApps.Delete
    Network.Google.AndroidManagement.Enterprises.WebApps.Get
    Network.Google.AndroidManagement.Enterprises.WebApps.List
    Network.Google.AndroidManagement.Enterprises.WebApps.Patch
    Network.Google.AndroidManagement.Enterprises.WebTokens.Create
    Network.Google.AndroidManagement.SignupUrls.Create
    Network.Google.AndroidManagement.Types

  other-modules:
    Network.Google.AndroidManagement.Internal.Product
    Network.Google.AndroidManagement.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
