name:                  gogol-appengine-taskqueue
version:               0.0.1
synopsis:              TaskQueue API Client.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Lets you access a Google App Engine Pull Task Queue over REST.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AppEngineTaskQueue
        , Network.Google.AppEngineTaskQueue.Types
        , Network.Google.Resource.Taskqueue.Taskqueues.Get
        , Network.Google.Resource.Taskqueue.Tasks.Delete
        , Network.Google.Resource.Taskqueue.Tasks.Get
        , Network.Google.Resource.Taskqueue.Tasks.Insert
        , Network.Google.Resource.Taskqueue.Tasks.Lease
        , Network.Google.Resource.Taskqueue.Tasks.List
        , Network.Google.Resource.Taskqueue.Tasks.Patch
        , Network.Google.Resource.Taskqueue.Tasks.Update

    other-modules:
          Network.Google.AppEngineTaskQueue.Types.Product
        , Network.Google.AppEngineTaskQueue.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
