name:                  gogol-appengine
version:               0.0.1
synopsis:              Google App Engine Admin SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    The Google App Engine Admin API enables developers to provision and
    manage their App Engine applications.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1beta4@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AppEngine
        , Network.Google.AppEngine.Types
        , Network.Google.Resource.AppEngine.Apps.Get
        , Network.Google.Resource.AppEngine.Apps.Modules.Delete
        , Network.Google.Resource.AppEngine.Apps.Modules.Get
        , Network.Google.Resource.AppEngine.Apps.Modules.List
        , Network.Google.Resource.AppEngine.Apps.Modules.Patch
        , Network.Google.Resource.AppEngine.Apps.Modules.Versions.Create
        , Network.Google.Resource.AppEngine.Apps.Modules.Versions.Delete
        , Network.Google.Resource.AppEngine.Apps.Modules.Versions.Get
        , Network.Google.Resource.AppEngine.Apps.Modules.Versions.List
        , Network.Google.Resource.AppEngine.Apps.Operations.Get
        , Network.Google.Resource.AppEngine.Apps.Operations.List

    other-modules:
          Network.Google.AppEngine.Types.Product
        , Network.Google.AppEngine.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
