name:                  gogol-appengine
version:               0.5.0
synopsis:              Google App Engine Admin SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Provisions and manages developers\' App Engine applications.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AppEngine
        , Network.Google.AppEngine.Types
        , Network.Google.Resource.AppEngine.Apps.AuthorizedCertificates.Create
        , Network.Google.Resource.AppEngine.Apps.AuthorizedCertificates.Delete
        , Network.Google.Resource.AppEngine.Apps.AuthorizedCertificates.Get
        , Network.Google.Resource.AppEngine.Apps.AuthorizedCertificates.List
        , Network.Google.Resource.AppEngine.Apps.AuthorizedCertificates.Patch
        , Network.Google.Resource.AppEngine.Apps.AuthorizedDomains.List
        , Network.Google.Resource.AppEngine.Apps.Create
        , Network.Google.Resource.AppEngine.Apps.DomainMAppings.Create
        , Network.Google.Resource.AppEngine.Apps.DomainMAppings.Delete
        , Network.Google.Resource.AppEngine.Apps.DomainMAppings.Get
        , Network.Google.Resource.AppEngine.Apps.DomainMAppings.List
        , Network.Google.Resource.AppEngine.Apps.DomainMAppings.Patch
        , Network.Google.Resource.AppEngine.Apps.Firewall.IngressRules.BatchUpdate
        , Network.Google.Resource.AppEngine.Apps.Firewall.IngressRules.Create
        , Network.Google.Resource.AppEngine.Apps.Firewall.IngressRules.Delete
        , Network.Google.Resource.AppEngine.Apps.Firewall.IngressRules.Get
        , Network.Google.Resource.AppEngine.Apps.Firewall.IngressRules.List
        , Network.Google.Resource.AppEngine.Apps.Firewall.IngressRules.Patch
        , Network.Google.Resource.AppEngine.Apps.Get
        , Network.Google.Resource.AppEngine.Apps.Locations.Get
        , Network.Google.Resource.AppEngine.Apps.Locations.List
        , Network.Google.Resource.AppEngine.Apps.Operations.Get
        , Network.Google.Resource.AppEngine.Apps.Operations.List
        , Network.Google.Resource.AppEngine.Apps.Patch
        , Network.Google.Resource.AppEngine.Apps.Repair
        , Network.Google.Resource.AppEngine.Apps.Services.Delete
        , Network.Google.Resource.AppEngine.Apps.Services.Get
        , Network.Google.Resource.AppEngine.Apps.Services.List
        , Network.Google.Resource.AppEngine.Apps.Services.Patch
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Create
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Delete
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Get
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Instances.Debug
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Instances.Delete
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Instances.Get
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Instances.List
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.List
        , Network.Google.Resource.AppEngine.Apps.Services.Versions.Patch

    other-modules:
          Network.Google.AppEngine.Types.Product
        , Network.Google.AppEngine.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
