cabal-version:      2.2
name:               gogol-appengine
version:            0.5.0
synopsis:           Google App Engine Admin SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Provisions and manages developers\' App Engine applications.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-appengine

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AppEngine
    Network.Google.AppEngine.Apps.AuthorizedCertificates.Create
    Network.Google.AppEngine.Apps.AuthorizedCertificates.Delete
    Network.Google.AppEngine.Apps.AuthorizedCertificates.Get
    Network.Google.AppEngine.Apps.AuthorizedCertificates.List
    Network.Google.AppEngine.Apps.AuthorizedCertificates.Patch
    Network.Google.AppEngine.Apps.AuthorizedDomains.List
    Network.Google.AppEngine.Apps.Create
    Network.Google.AppEngine.Apps.DomainMappings.Create
    Network.Google.AppEngine.Apps.DomainMappings.Delete
    Network.Google.AppEngine.Apps.DomainMappings.Get
    Network.Google.AppEngine.Apps.DomainMappings.List
    Network.Google.AppEngine.Apps.DomainMappings.Patch
    Network.Google.AppEngine.Apps.Firewall.IngressRules.BatchUpdate
    Network.Google.AppEngine.Apps.Firewall.IngressRules.Create
    Network.Google.AppEngine.Apps.Firewall.IngressRules.Delete
    Network.Google.AppEngine.Apps.Firewall.IngressRules.Get
    Network.Google.AppEngine.Apps.Firewall.IngressRules.List
    Network.Google.AppEngine.Apps.Firewall.IngressRules.Patch
    Network.Google.AppEngine.Apps.Get
    Network.Google.AppEngine.Apps.Locations.Get
    Network.Google.AppEngine.Apps.Locations.List
    Network.Google.AppEngine.Apps.Operations.Get
    Network.Google.AppEngine.Apps.Operations.List
    Network.Google.AppEngine.Apps.Patch
    Network.Google.AppEngine.Apps.Repair
    Network.Google.AppEngine.Apps.Services.Delete
    Network.Google.AppEngine.Apps.Services.Get
    Network.Google.AppEngine.Apps.Services.List
    Network.Google.AppEngine.Apps.Services.Patch
    Network.Google.AppEngine.Apps.Services.Versions.Create
    Network.Google.AppEngine.Apps.Services.Versions.Delete
    Network.Google.AppEngine.Apps.Services.Versions.Get
    Network.Google.AppEngine.Apps.Services.Versions.Instances.Debug
    Network.Google.AppEngine.Apps.Services.Versions.Instances.Delete
    Network.Google.AppEngine.Apps.Services.Versions.Instances.Get
    Network.Google.AppEngine.Apps.Services.Versions.Instances.List
    Network.Google.AppEngine.Apps.Services.Versions.List
    Network.Google.AppEngine.Apps.Services.Versions.Patch
    Network.Google.AppEngine.Types

  other-modules:
    Network.Google.AppEngine.Internal.Product
    Network.Google.AppEngine.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
