cabal-version:      2.2
name:               gogol-apps-calendar
version:            0.5.0
synopsis:           Google Calendar SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Manipulates events and other calendar data.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v3@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-apps-calendar

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AppsCalendar
    Network.Google.AppsCalendar.Calendar.Acl.Delete
    Network.Google.AppsCalendar.Calendar.Acl.Get
    Network.Google.AppsCalendar.Calendar.Acl.Insert
    Network.Google.AppsCalendar.Calendar.Acl.List
    Network.Google.AppsCalendar.Calendar.Acl.Patch
    Network.Google.AppsCalendar.Calendar.Acl.Update
    Network.Google.AppsCalendar.Calendar.Acl.Watch
    Network.Google.AppsCalendar.Calendar.CalendarList.Delete
    Network.Google.AppsCalendar.Calendar.CalendarList.Get
    Network.Google.AppsCalendar.Calendar.CalendarList.Insert
    Network.Google.AppsCalendar.Calendar.CalendarList.List
    Network.Google.AppsCalendar.Calendar.CalendarList.Patch
    Network.Google.AppsCalendar.Calendar.CalendarList.Update
    Network.Google.AppsCalendar.Calendar.CalendarList.Watch
    Network.Google.AppsCalendar.Calendar.Calendars.Clear
    Network.Google.AppsCalendar.Calendar.Calendars.Delete
    Network.Google.AppsCalendar.Calendar.Calendars.Get
    Network.Google.AppsCalendar.Calendar.Calendars.Insert
    Network.Google.AppsCalendar.Calendar.Calendars.Patch
    Network.Google.AppsCalendar.Calendar.Calendars.Update
    Network.Google.AppsCalendar.Calendar.Channels.Stop
    Network.Google.AppsCalendar.Calendar.Colors.Get
    Network.Google.AppsCalendar.Calendar.Events.Delete
    Network.Google.AppsCalendar.Calendar.Events.Get
    Network.Google.AppsCalendar.Calendar.Events.Import
    Network.Google.AppsCalendar.Calendar.Events.Insert
    Network.Google.AppsCalendar.Calendar.Events.Instances
    Network.Google.AppsCalendar.Calendar.Events.List
    Network.Google.AppsCalendar.Calendar.Events.Move
    Network.Google.AppsCalendar.Calendar.Events.Patch
    Network.Google.AppsCalendar.Calendar.Events.QuickAdd
    Network.Google.AppsCalendar.Calendar.Events.Update
    Network.Google.AppsCalendar.Calendar.Events.Watch
    Network.Google.AppsCalendar.Calendar.Freebusy.Query
    Network.Google.AppsCalendar.Calendar.Settings.Get
    Network.Google.AppsCalendar.Calendar.Settings.List
    Network.Google.AppsCalendar.Calendar.Settings.Watch
    Network.Google.AppsCalendar.Types

  other-modules:
    Network.Google.AppsCalendar.Internal.Product
    Network.Google.AppsCalendar.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
