cabal-version:      2.2
name:               gogol-apps-licensing
version:            0.5.0
synopsis:           Google Enterprise License Manager SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  The Google Enterprise License Manager API\'s allows you to license apps for all the users of a domain managed by you.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-apps-licensing

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AppsLicensing
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.Delete
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.Get
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.Insert
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.ListForProduct
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.ListForProductAndSku
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.Patch
    Network.Google.AppsLicensing.Licensing.LicenseAssignments.Update
    Network.Google.AppsLicensing.Types

  other-modules:
    Network.Google.AppsLicensing.Internal.Product
    Network.Google.AppsLicensing.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
