name:                  gogol-apps-reseller
version:               0.5.0
synopsis:              Google Enterprise Apps Reseller SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Creates and manages your customers and their subscriptions.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.
    .
    Labels:
    .
    * Limited Availability

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AppsReseller
        , Network.Google.AppsReseller.Types
        , Network.Google.Resource.Reseller.Customers.Get
        , Network.Google.Resource.Reseller.Customers.Insert
        , Network.Google.Resource.Reseller.Customers.Patch
        , Network.Google.Resource.Reseller.Customers.Update
        , Network.Google.Resource.Reseller.Resellernotify.Getwatchdetails
        , Network.Google.Resource.Reseller.Resellernotify.Register
        , Network.Google.Resource.Reseller.Resellernotify.Unregister
        , Network.Google.Resource.Reseller.Subscriptions.Activate
        , Network.Google.Resource.Reseller.Subscriptions.ChangePlan
        , Network.Google.Resource.Reseller.Subscriptions.ChangeRenewalSettings
        , Network.Google.Resource.Reseller.Subscriptions.ChangeSeats
        , Network.Google.Resource.Reseller.Subscriptions.Delete
        , Network.Google.Resource.Reseller.Subscriptions.Get
        , Network.Google.Resource.Reseller.Subscriptions.Insert
        , Network.Google.Resource.Reseller.Subscriptions.List
        , Network.Google.Resource.Reseller.Subscriptions.StartPaidService
        , Network.Google.Resource.Reseller.Subscriptions.Suspend

    other-modules:
          Network.Google.AppsReseller.Types.Product
        , Network.Google.AppsReseller.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
