name:                  gogol-apps-tasks
version:               0.0.1
synopsis:              Google Tasks API Client.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Lets you manage your tasks and task lists.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.API.Tasks.Tasklists.Delete
        , Network.Google.API.Tasks.Tasklists.Get
        , Network.Google.API.Tasks.Tasklists.Insert
        , Network.Google.API.Tasks.Tasklists.List
        , Network.Google.API.Tasks.Tasklists.Patch
        , Network.Google.API.Tasks.Tasklists.Update
        , Network.Google.API.Tasks.Tasks.Clear
        , Network.Google.API.Tasks.Tasks.Delete
        , Network.Google.API.Tasks.Tasks.Get
        , Network.Google.API.Tasks.Tasks.Insert
        , Network.Google.API.Tasks.Tasks.List
        , Network.Google.API.Tasks.Tasks.Move
        , Network.Google.API.Tasks.Tasks.Patch
        , Network.Google.API.Tasks.Tasks.Update
        , Network.Google.Apps.Tasks
        , Network.Google.Apps.Tasks.Types

    other-modules:
          Network.Google.Apps.Tasks.Types.Product
        , Network.Google.Apps.Tasks.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
